<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:id="@+id/id_search_ll"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/id_search_ll2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_gradient_blue"
        android:gravity="center_vertical"
        android:minHeight="56dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="14dp"
            android:src="@mipmap/btn_back" />

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center_vertical"
            android:hint="@string/app_name"
            android:imeOptions="actionSend"
            android:singleLine="true"
            android:maxLength="10"
            android:minHeight="36dp"
            android:overScrollMode="never"
            android:textColorHint="@color/color_dfdfdf"
            android:textSize="15sp" />

        <ImageView
            android:id="@+id/iv_search_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="7dp"
            />

        <View
            android:layout_width="1dp"
            android:layout_height="24dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:background="@color/color_dfdfdf" />

        <ImageView
            android:id="@+id/iv_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@null"
            android:padding="12dp"
            android:background="@mipmap/ic_search_home"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/color_dfdfdf" />

    <ScrollView
        android:id="@+id/id_search_sv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="vertical"
                android:background="@color/color_e7f3fe">

                <TextView
                    android:id="@+id/id_search_tv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="left|center_vertical"
                    android:textSize="12sp"
                    android:paddingLeft="15dp"
                    android:textColor="@color/color_87c0ff"
                    android:text="@string/search_history" />

                <com.youqu.piclbs.util.MyListView
                    android:id="@+id/listView"
                    android:background="@color/white"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginEnd="15dp"
                    android:dividerHeight="1px"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_dfdfdf"/>

            <TextView
                android:id="@+id/tv_clear"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textSize="14sp"
                android:gravity="center"
                android:textColor="@color/color_4691e5"
                android:text="@string/clear_search" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/color_dfdfdf"/>
        </LinearLayout>

    </ScrollView>

    <com.youqu.piclbs.util.PullToRefreshLayout
        android:id="@+id/articlePtrLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/articleRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </com.youqu.piclbs.util.PullToRefreshLayout>

</LinearLayout>